# evolution-of-todo

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: minikube-deployer.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: README.md
docs/: api_reference.md  architecture.md  branching-strategy.md
history/adr/: 0001-cli-layered-architecture.md  0002-in-memory-storage-with-standard-library.md
phase-1/backend/: README.md  performance_test.py  pyproject.toml
phase-1/backend/src/backend/: commands.py  main.py  manager.py  models.py
phase-1/backend/tests/fixtures/: sample_data.py
phase-1/backend/tests/integration/: test_menu_workflow.py
phase-1/backend/tests/unit/: test_commands.py  test_menu.py  test_models.py
phase-2/: README.md
phase-2/backend/: README.md  pyproject.toml
phase-2/frontend/: README.md  package.json  test-auth.js
phase-3/: README.md
phase-3/backend/: README.md  pyproject.toml
phase-3/backend/src/backend/: __init__.py  agents.py  config.py  main.py  mcp_server.py
phase-3/backend/src/backend/api/: chatkit.py
phase-3/backend/src/backend/auth/: jwt.py
phase-3/backend/src/backend/store/: chatkit_store.py
phase-3/frontend/: README.md
phase-4/: AUTH_BYPASS_ROLLBACK.md  README.md  script.md  start.server.sh  status.server.sh  stop.server.sh
phase-4/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  SETUP.md  pyproject.toml  test_context_fix.py
phase-5/: AUTH_BYPASS_IMPLEMENTATION.md  AUTH_BYPASS_SUMMARY.md  README.md  minikube-deployment.md
(+453 files in other folders)
