[project]
name = "backend"
version = "0.1.0"
description = "In-Memory Command-Line Todo Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[project.scripts]
todo = "backend.main:main"

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
